<resources>
    <string name="app_name">HM2</string>
    <string name="personal_information">Personal Information</string>
    <string name="nearest_shop">Nearest Shop</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="main_menu">Main Menu</string>
    <string name="activity_order">Activity order</string>
    <string name="_00_00">00.00</string>
    <string name="balance">Balance</string>
</resources>